# NFSLAN

./: .gitignore  CMakeLists.txt  NFSLAN.cpp  README.md
NFSU2_RU/: server.dll.c  server.dll.h  speed2.exe.h
SERVER/MW/: server.dll.c  server.dll.h
SERVER/U2/: server.dll.c  server.dll.h
SPEEDEXE/: SPEEDEXE.h
docs/: ARCHITECTURE.md  BUILD.md  CLIENT_SETUP.md  LEGACY_CONSOLE.md  RUNNING.md  U2_PATCHER.md
gui/: CMakeLists.txt
gui/src/: MainWindow.cpp  MainWindow.h  main.cpp
injector/hooking/: Hooking.Patterns.h
native_win32/: CMakeLists.txt
native_win32/src/: MWPatchLauncher.cpp  NativeMain.cpp  RelayMain.cpp  U2PatchLauncher.cpp
